--- a/.env
+++ b/.env
@@ -17,4 +17,16 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=57b0e174d90089a19272a5907b5d7daa
+
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://test_user:RQHK0u3TuSUZ6i52@127.0.0.1:3306/test_avtoto?serverVersion=8.0.19&charset=utf8"
+DATABASE_URL="mysql://root:secret@autot-mysql:3306/autot?serverVersion=8.0.35&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
